--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,12 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.Workout_App_2">
         </activity>
+        <activity
+            android:name=".presentation.AuthActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Workout_App_2">
+        </activity>
     </application>
 
 </manifest>
